# trang_vien_so

./: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_WORKFLOW.md  FUNCTION_TRACKING.md  README.md  package-lock.json  package.json  user_input.md
backend/: .gitignore  F03_AUTHENTICATION_RESOLUTION.md  README.md  pyproject.toml  requirements.txt  test_api_simple.py  test_deceased_auth.py
backend/app/: main.py
backend/app/core/: auth.py  config.py  database.py  security.py
backend/app/models/: __init__.py  deceased.py  family.py  media.py  user.py
backend/app/routers/: auth.py  deceased.py  health.py  users.py
backend/app/schemas/: __init__.py  auth.py  deceased.py  family.py  media.py  user.py
backend/app/services/: auth_service.py
backend/migrations/: add_deceased_cultural_fields.sql
backend/tests/: __init__.py  quick_auth_test.py  test_authentication.py  test_database_integration.py  test_python_api.py
database/: docker-compose.yml  schema.sql
docs/: BRD.md  Customer_Journey.md  Features.md  Planning.md  Task.md
frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/layout/: AuthLayout.tsx  Layout.tsx
frontend/src/components/ui/: LoadingSpinner.tsx
frontend/src/pages/: DashboardPage.tsx  LandingPage.tsx  NotFoundPage.tsx  ProfilePage.tsx
frontend/src/services/: api.ts
frontend/src/store/: authStore.ts
frontend/src/types/: index.ts
shared/: package.json
shared/src/types/: index.d.ts  index.d.ts.map  index.js.map  index.ts
(+6 files in other folders)
